# Binary-Index-Search-Test

./: .gitignore  README.md
C++/: README.MD  main.cpp
C++/AmIGoingALittleToFar/: .gitignore  CMakeLists.txt  Makefile  README.md  binarySearch.cpp  binarySearch.h  build.sh  generate.cpp  main.cpp  readFromFile.cpp  readFromFile.h  run.sh  writeToFile.cpp  writeToFile.h
C++/AmIGoingALittleToFar/include/: binarySearch.h  index.hpp  search.hpp  sort.hpp
C++/AmIGoingALittleToFar/src/: main.cpp  search.cpp  sort.cpp  writeToFile.cpp
C++/BasicSort/include/: checkSort.h  sort.h
C++/BasicSort/src/: checkSort.cpp  main.cpp  sort.cpp
C++/MSBuild/Binary Index Search/: Binary Index Search.sln
C++/MSBuild/Binary Index Search/Binary Index Search/: Binary Index Search.vcxproj  checkSort.cpp  checkSort.hpp  main.cpp  sort.hpp
CS/BinarySearch/: BinarySearch.sln  Program.cs
JavaScript/: main.js
Python/: main.py
Python/visualisation/: README.md  index.py  main.py
Typescript/: package-lock.json  package.json
Typescript/src/: main.ts
